# InsightHub

./: .env.example  .gitignore  README.md  aspect.py  cli.py  data_prep.py  debug_entities.json  debug_output.json  export_test.json  golf_test.json  gpt_only_test.json  json_fix_test.json  llm.py  models.py  pyproject.toml  quality_test.py  ranking_fixed.json  ranking_test.json  reddit_client.py  requirements.txt  restoration_test.json  scoring.py  solution_test.json  streamlit_app.py  tesla_test.json  test_cli.py  test_flat.py  test_output.json  validate.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
cache/llm_cache/: cache.db  cache.db-shm  cache.db-wal
config/: platform_weights.yaml  weights.yaml
config/aspects/: tech_products.yaml
examples/: basic_usage.py
insighthub/: __init__.py  cli.py  config.py  models.py
insighthub/analysis/: __init__.py  aspect.py  scoring.py  sentiment.py
insighthub/reporting/: __init__.py  data_prep.py
insighthub/services/: __init__.py  llm.py  reddit_client.py
insighthub/ui/: streamlit_app.py
src/insighthub/: __init__.py  cli.py  main.py
src/insighthub/core/: __init__.py  aspect.py  config.py  constants.py  cross_platform_models.py  diagnostics.py  models.py  relevance.py  report_generator.py  scoring.py
src/insighthub/services/: __init__.py  cross_platform_manager.py  fusion_engine.py  (+7 more)
tests/: test_enrichment.py  test_entity_type.py  test_image_enrichment.py  test_pipeline_integration.py  test_pipeline_quality.py  test_platform_bias.py  test_quality.py  test_scoring.py  test_youtube_quality.py
(+4 files in other folders)
